--- a/views/server/user/login.jade
+++ b/views/server/user/login.jade
@@ -12,6 +12,7 @@ block content
                     .form-group
                         label 密码
                         input.form-control(type='password', name='password')
+                    input(type='hidden', name='_csrf', value='#{token}')
                     button.btn.btn-primary(type='submit') 登录
                     | &nbsp;&nbsp;
                     a(href='#{adminDir}/user/register') 注册
