--- a/views/server/content/add.jade
+++ b/views/server/content/add.jade
@@ -8,15 +8,17 @@ block content
                     .form-group
                         label 标题
                         input.form-control(name='title')
-                    .form-group
-                        label 分类
-                        select.form-control(name='category')
-                            option(value='') 请选择
-                            - each category in categorys
-                                option(value='#{category.id}')
-                                    | #{category.name}
+                    if (categorys && categorys.length > 0)
+                        .form-group
+                            label 分类
+                            select.form-control(name='category')
+                                option(value='') 请选择
+                                - each category in categorys
+                                    option(value='#{category.id}')
+                                        | #{category.name}
                     .form-group
                         label 内容
                         textarea.form-control(name='content', rows='8')
+                    input(type='hidden', name='_csrf', value='#{token}')
                     button.btn.btn-primary(type='submit') 提交
 
