--- a/views/server/role/add.jade
+++ b/views/server/role/add.jade
@@ -21,5 +21,6 @@ block content
                     .form-group
                         label 描述
                         textarea.form-control(name='description', rows='8')
+                    input(type='hidden', name='_csrf', value='#{token}')
                     button.btn.btn-primary(type='submit') 提交
 
