--- a/views/server/user/register.jade
+++ b/views/server/user/register.jade
@@ -18,6 +18,7 @@ block content
                     .form-group
                         label Email
                         input.form-control(name='email')
+                    input(type='hidden', name='_csrf', value='#{token}')
                     button.btn.btn-primary(type='submit') 提交
                     | 
                     a(href='#{adminDir}/user/login') 登录
