--- a/views/app/content/item.jade
+++ b/views/app/content/item.jade
@@ -14,7 +14,7 @@ block content
                             strong #{content.author.name}
                         | 发布于：#{moment(content.created).format('LL')} 
                         | 访问量：#{content.visits}
-                    .content !{content.content}
+                    .content #{content.content}
                     .comments
                         h2 评论
                         if(content.comments)
